packages/svelte/tests/validator/samples/rune-invalid-spread-state/input.svelte
<script>
	const args = [0];
	const count = $state(...args);
</script>