packages/svelte/tests/compiler-errors/samples/export-derived-state/main.svelte
<script>
	let count = $state(0);
	export const double = $derived(count * 2);
</script>
